feat(socket): 实现构件插槽系统并完善放置约束机制
- 新增 SocketType 枚举定义8种插槽类型（墙面、墙洞、边缘、屋面等）
- 实现 Socket 类作为几何语义复合体支持内外侧判断
- 扩展 ComponentPlacementSpec 添加 allowedSockets 和对齐策略等字段
- 创建 SocketMatcher 作为核心匹配算法验证构件与插槽兼容性
- 实现 SocketProvider 接口和 SocketRegistry 管理插槽提供者
- 集成到 PromptAssembler 为AI提供插槽约束信息
- 添加 SocketHighlighter 在客户端高亮显示合法放置位置
- 更新 ComponentRetriever 使用新存储方式加载构件目录
- 实现自动推断机制从 AttachmentType 映射到相应 Socket 类型